tests/ui/issue_15_panic_dropck.stderr
error[E0716]: temporary value dropped while borrowed
  --> tests/ui/issue_15_panic_dropck.rs:7:5
   |
7  |     make_guard!(g_b);
   |     ^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
...
15 | }
   | -
   | |
   | temporary value is freed at the end of this statement
   | borrow might be used here, when `lifetime_brand` is dropped and runs the `Drop` code for type `LifetimeBrand`
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: this error originates in the macro `make_guard` (in Nightly builds, run with -Z macro-backtrace for more info)
